--- a/src/app/modules/app/nav-mobile/nav-mobile.component.html
+++ b/src/app/modules/app/nav-mobile/nav-mobile.component.html
@@ -8,8 +8,8 @@
             <ul class="nav-mobile__list">
                 <li>
                     <button class="nav-mobile__list-button" (click)="onSwitchLayout('langs')">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" class="nav-mobile__list-link-icon">
-                            <path style="fill: currentColor;" d="M29.36,15A12,12,0,0,1,8.87,23.49l1.42-1.42A10,10,0,1,0,7.36,15v1.59l3.28-3.3,1.43,1.42-5.71,5.7L.64,14.71l1.43-1.42,3.29,3.3V15a12,12,0,1,1,24,0Zm-11-.4V8.74h-2v7l6.06,3.5,1-1.74Z"></path>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="nav-mobile__list-link-icon">
+                            <path style="fill: currentColor;" d="M13.74.13A5.56,5.56,0,0,0,13,.05a8.94,8.94,0,0,0-1,0,8.94,8.94,0,0,0-1,.05,5.56,5.56,0,0,0-.7.08,12,12,0,0,0,0,23.74A5.56,5.56,0,0,0,11,24,8.94,8.94,0,0,0,12,24,8.94,8.94,0,0,0,13,24a5.56,5.56,0,0,0,.7-.08,12,12,0,0,0,0-23.74ZM21.16,8H16.63a18.16,18.16,0,0,0-2-5.64A10.06,10.06,0,0,1,21.16,8ZM15,12c0,.68,0,1.34-.09,2H9.09C9,13.34,9,12.68,9,12s0-1.34.09-2h5.82C15,10.66,15,11.32,15,12ZM12.1,2a15,15,0,0,1,2.51,6H9.39A15,15,0,0,1,11.9,2a1.13,1.13,0,0,1,.1-.13A1.13,1.13,0,0,1,12.1,2Zm-2.76.36A18.16,18.16,0,0,0,7.37,8H2.84A10.06,10.06,0,0,1,9.34,2.36ZM2.2,10H7.09C7,10.65,7,11.32,7,12s0,1.35.09,2H2.2a10.1,10.1,0,0,1,0-4Zm.64,6H7.37a18.16,18.16,0,0,0,2,5.64A10.06,10.06,0,0,1,2.84,16Zm9.06,6a15,15,0,0,1-2.51-6h5.22a15,15,0,0,1-2.51,6,1.13,1.13,0,0,1-.1.13A1.13,1.13,0,0,1,11.9,22Zm2.76-.36a18.16,18.16,0,0,0,2-5.64h4.53A10.06,10.06,0,0,1,14.66,21.64ZM21.8,14H16.91c.06-.65.09-1.32.09-2s0-1.35-.09-2H21.8a10.1,10.1,0,0,1,0,4Z"></path>
                         </svg>
                         <span class="nav-mobile__list-link-text">{{ 'nav.lang.language' | translate }}</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" viewBox="0 0 6 10">
@@ -21,25 +21,25 @@
             <div class="nav-mobile__sep"></div>
             <ul class="nav-mobile__list">
                 <li>
-                    <a routerLink="/faq" class="nav-mobile__list-link" (click)="onClose()">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" class="nav-mobile__list-link-icon">
-                            <path style="fill: currentColor;" d="M29.36,15A12,12,0,0,1,8.87,23.49l1.42-1.42A10,10,0,1,0,7.36,15v1.59l3.28-3.3,1.43,1.42-5.71,5.7L.64,14.71l1.43-1.42,3.29,3.3V15a12,12,0,1,1,24,0Zm-11-.4V8.74h-2v7l6.06,3.5,1-1.74Z"></path>
+                    <a routerLink="/faq" class="nav-mobile__list-link" routerLinkActive="nav-mobile__list-link_active" (click)="onClose()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="nav-mobile__list-link-icon">
+                            <path style="fill: currentColor;" d="M13.05,15.22H10.8v-.59a3.9,3.9,0,0,1,.36-1.79,5.37,5.37,0,0,1,1.44-1.58,10.11,10.11,0,0,0,1.29-1.16,1.49,1.49,0,0,0,.32-.95,1.59,1.59,0,0,0-.57-1.23,2.25,2.25,0,0,0-1.55-.51,2.32,2.32,0,0,0-1.57.53,2.83,2.83,0,0,0-.88,1.64L7.38,9.3A3.77,3.77,0,0,1,8.72,6.62,4.75,4.75,0,0,1,12,5.52a5,5,0,0,1,3.39,1.12,3.38,3.38,0,0,1,1.25,2.59,2.8,2.8,0,0,1-.46,1.54,10,10,0,0,1-2,2,3.69,3.69,0,0,0-1,1A3.52,3.52,0,0,0,13.05,15.22ZM10.8,18.54V16.07h2.48v2.47ZM12,24A12,12,0,1,1,24,12,12,12,0,0,1,12,24ZM12,2A10,10,0,1,0,22,12,10,10,0,0,0,12,2Z"></path>
                         </svg>
                         <span class="nav-mobile__list-link-text">{{ 'nav.items.faq' | translate }}</span>
                     </a>
                 </li>
                 <li>
-                    <a routerLink="/contact-us" class="nav-mobile__list-link" (click)="onClose()">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" class="nav-mobile__list-link-icon">
-                            <path style="fill: currentColor;" d="M29.36,15A12,12,0,0,1,8.87,23.49l1.42-1.42A10,10,0,1,0,7.36,15v1.59l3.28-3.3,1.43,1.42-5.71,5.7L.64,14.71l1.43-1.42,3.29,3.3V15a12,12,0,1,1,24,0Zm-11-.4V8.74h-2v7l6.06,3.5,1-1.74Z"></path>
+                    <a routerLink="/contact-us" class="nav-mobile__list-link" routerLinkActive="nav-mobile__list-link_active" (click)="onClose()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="nav-mobile__list-link-icon">
+                            <path style="fill: currentColor;" d="M2,23A1.19,1.19,0,0,1,1.68,23,1,1,0,0,1,1,22V5A3,3,0,0,1,4,2H20a3,3,0,0,1,3,3V16a3,3,0,0,1-3,3H5.5L2.8,22.6A1,1,0,0,1,2,23ZM4,4A1,1,0,0,0,3,5V19l1.2-1.6A1,1,0,0,1,5,17H20a1,1,0,0,0,1-1V5a1,1,0,0,0-1-1ZM18,7H6V9H18Zm0,4H10v2h8Z"></path>
                         </svg>
                         <span class="nav-mobile__list-link-text">{{ 'nav.items.contact_us' | translate }}</span>
                     </a>
                 </li>
                 <li>
-                    <a [routerLink]="termsLink" class="nav-mobile__list-link" [class.nav-mobile__list-link_has-dot]="hasTermsDot" (click)="onClose()">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" class="nav-mobile__list-link-icon">
-                            <path style="fill: currentColor;" d="M29.36,15A12,12,0,0,1,8.87,23.49l1.42-1.42A10,10,0,1,0,7.36,15v1.59l3.28-3.3,1.43,1.42-5.71,5.7L.64,14.71l1.43-1.42,3.29,3.3V15a12,12,0,1,1,24,0Zm-11-.4V8.74h-2v7l6.06,3.5,1-1.74Z"></path>
+                    <a [routerLink]="termsLink" class="nav-mobile__list-link" routerLinkActive="nav-mobile__list-link_active" [class.nav-mobile__list-link_has-dot]="hasTermsDot" (click)="onClose()">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="nav-mobile__list-link-icon">
+                            <path style="fill: currentColor;" d="M19,24H5a3,3,0,0,1-3-3V3A3,3,0,0,1,5,0H19a3,3,0,0,1,3,3V21A3,3,0,0,1,19,24ZM5,2A1,1,0,0,0,4,3V21a1,1,0,0,0,1,1H19a1,1,0,0,0,1-1V3a1,1,0,0,0-1-1ZM18,5H6V7H18Zm0,4H6v2H18Zm0,4H10v2h8Z"></path>
                         </svg>
                         <span class="nav-mobile__list-link-text">{{ 'nav.items.terms' | translate }}</span>
                     </a>
@@ -58,8 +58,8 @@
             <li *ngFor="let lang of langs">
                 <button class="nav-mobile__list-button" (click)="onSwitchLang(lang.code)">
                     <ng-container *ngIf="currentLang === lang.code">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" class="nav-mobile__list-link-icon">
-                            <path style="fill: currentColor;" d="M29.36,15A12,12,0,0,1,8.87,23.49l1.42-1.42A10,10,0,1,0,7.36,15v1.59l3.28-3.3,1.43,1.42-5.71,5.7L.64,14.71l1.43-1.42,3.29,3.3V15a12,12,0,1,1,24,0Zm-11-.4V8.74h-2v7l6.06,3.5,1-1.74Z"></path>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="nav-mobile__list-link-icon">
+                            <polygon style="fill: currentColor;" points="8 20.41 0.29 12.71 1.71 11.29 8 17.59 22.29 3.29 23.71 4.71 8 20.41"></polygon>
                         </svg>
                     </ng-container>
                     <span class="nav-mobile__list-link-text">{{ lang.name }}</span>
