--- a/src/app/modules/app/nav-mobile/nav-mobile.component.scss
+++ b/src/app/modules/app/nav-mobile/nav-mobile.component.scss
@@ -79,7 +79,7 @@
         }
 
         > li {
-            padding: 2px;
+            padding: 2px 10px;
         }
 
         &-button,
@@ -88,7 +88,7 @@
             flex-flow: row nowrap;
             align-items: center;
             border-radius: 6px;
-            padding: 12px 15px 12px 20px;
+            padding: 12px 15px 12px 16px;
             background-color: #fff;
             width: 100%;
             color: #6f7174;
@@ -128,6 +128,15 @@
             &:focus,
             &:active {
                 text-decoration: none;
+            }
+
+            &_active {
+                background-color: #f0f6fa;
+                color: #527ce8;
+            }
+
+            &_active &-text {
+                color: #527ce8;
             }
 
             &_has-dot:after {
